--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,7 +3,7 @@
     <div class="container-fluid">
       <a class="navbar-brand" routerLink="/"
         ><img
-          src="../../assets/images/Logobis.png"
+          src="../../assets/pictures/Logobis.png"
           class="logo"
           alt="Logo de la plateforme Trouve ton artisan représentant un artisan tenant une pancarte"
       /></a>
@@ -34,7 +34,7 @@
           </div>
           <button class="btn btn-outline" type="submit">Rechercher</button>
         </form>
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <div class="navbar-nav me-auto mb-2 mb-lg-0">
           <div class="nav-item dropdown">
             <a
               class="nav-link dropdown-toggle"
@@ -62,7 +62,7 @@
               </li>
             </ul>
           </div>
-        </ul>
+        </div>
       </div>
     </div>
   </nav>
