--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,3 +1,7 @@
+form {
+  padding-right: 5rem;
+}
+
 .navbar {
   position: fixed;
   top: 0;
@@ -7,7 +11,7 @@
 }
 
 .collapse {
-  margin-left: 35rem;
+  margin-left: 32rem;
 }
 
 .form-control {
