--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,53 @@
-<main>
-    <h1>Home</h1>
-    <p>Welcome to the home page!</p>
+<main class="fonctionnement-site">
+  <div class="titre-principal">
+    <div class="rectangle"></div>
+    <h1>Comment trouver mon artisan ?</h1>
+  </div>
+  <div class="rubrique-site">
+    <ul>
+      <li>
+        <div class="icon">
+          <h3>Choisir la catégorie d'artisanat dans le menu</h3>
+          <img
+            src="../../assets/pictures/picture-category.png"
+            alt="icône représentant un groupe de 3 personnes avec une roue dantée en bas à droite"
+          />
+        </div>
+      </li>
+
+      <li>
+        <div class="icon">
+          <h3>Choisir un artisan</h3>
+          <div class="img-icon1">
+            <img
+              src="../../assets/pictures/picture-hammer.png"
+              alt="icône représentant un marteau"
+            />
+          </div>
+        </div>
+      </li>
+      <li>
+        <div class="icon">
+          <h3>Le contacter via le formulaire de contact</h3>
+          <div class="img-icon2">
+            <img
+              src="../../assets/pictures/picture-form.png"
+              alt="icône de couleur rouge représentant un formulaire"
+            />
+          </div>
+        </div>
+      </li>
+      <li>
+        <div class="icon">
+          <h3>Une réponse vous sera apportée sous 48h</h3>
+          <div class="img-icon3">
+            <img
+              src="../../assets/pictures/picture-valid.png"
+              alt="icône représentant un rond bleu avec un V blanc pour un check"
+            />
+          </div>
+        </div>
+      </li>
+    </ul>
+  </div>
 </main>
