--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -8,10 +8,11 @@ form {
   width: 100%;
   height: 5rem;
   z-index: 1000;
+  background-color: #fff;
 }
 
 .collapse {
-  margin-left: 32rem;
+  padding-left: 32rem;
 }
 
 .form-control {
@@ -37,19 +38,6 @@ form {
 #search-input:focus {
   outline: none;
   box-shadow: none;
-}
-
-.btn {
-  background-color: #0074c7;
-  border: none;
-  color: #fff;
-  padding: 0.5rem 1rem;
-  margin-right: 1rem;
-  border-radius: 12rem;
-}
-
-.btn:hover {
-  background-color: #00497c;
 }
 
 li {
