--- a/src/styles.scss
+++ b/src/styles.scss
@@ -99,3 +99,24 @@ h5 {
   font-size: 1.375rem;
   color: $titleColor;
 }
+
+.btn {
+  background-color: #0074c7;
+  border: none;
+  color: #fff;
+  padding: 0.5rem 1rem;
+  margin-right: 1rem;
+  border-radius: 12rem;
+}
+
+.btn:hover {
+  background-color: #00497c;
+  color: #fff;
+}
+
+.rectangle {
+  width: 5.5rem;
+  height: 0.9375rem;
+  background-color: rgba(205, 44, 46, 0.75);
+  margin-bottom: 2.5625rem;
+}
