--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,9 +1,21 @@
 @import "../../styles.scss";
+// ******** GENERAL STYLES ********
 
 main {
   margin-top: 5rem;
   background-color: $backgroundColor;
 }
+
+h3 {
+  margin-right: 1.625rem;
+}
+
+.main-title,
+.title-craftsmen {
+  padding-left: 1.5rem;
+}
+
+// ******** SITE SECTION ********
 
 ul {
   list-style-type: decimal;
@@ -16,24 +28,16 @@ li {
   padding-bottom: 2.25rem;
 }
 
-h3 {
-  margin-right: 1.625rem;
-}
-
 img {
   width: 2.643125rem;
   height: auto;
 }
 
-.fonctionnement-site {
+.site-operation {
   padding: 6.25rem 0;
 }
 
-.titre-principal {
-  padding-left: 1.5rem;
-}
-
-.rubrique-site {
+.site-section {
   padding-top: 8.1875rem;
   padding-left: 11.25rem;
 }
@@ -52,4 +56,36 @@ img {
 
 .img-icon3 {
   padding-left: 2.5rem;
+}
+
+// ******** TOP 3 ********
+
+.top3 {
+  padding-bottom: 6.25rem;
+}
+
+.craftsmen-card {
+  padding-top: 8.75rem;
+  padding-left: 5rem;
+  padding-right: 5rem;
+}
+
+.card {
+  width: 22.8125rem;
+  height: 15.625rem;
+  background-color: rgba(0, 73, 124, 0.1);
+}
+
+.stars {
+  padding-bottom: 2rem;
+}
+
+.card-h4 {
+  margin-top: 1.5625rem;
+}
+
+.card:hover {
+  background-color: rgba(130, 184, 100, 0.75);
+  width: 25rem;
+  height: 18.75rem;
 }
