--- a/src/app/building/building.component.html
+++ b/src/app/building/building.component.html
@@ -1,1 +1,36 @@
-<p>building works!</p>
+<main>
+  <section class="title">
+    <div class="rectangle"></div>
+    <h2>Le Bâtiment</h2>
+  </section>
+  <section class="building-craftsmen">
+    <div class="craftsmen-card" *ngIf="data && data.length > 0">
+      <div class="row row-cols-1 row-cols-md-3 g-4">
+        <ng-container *ngFor="let artisan of data">
+          <div class="col">
+            <div class="card">
+              <div class="card-body">
+                <div class="stars">
+                  <i
+                    *ngFor="let star of artisan.note | starRating"
+                    class="bi"
+                    [ngClass]="{
+                      'bi-star-fill': star === 'full',
+                      'bi-star-half': star === 'half',
+                      'bi-star': star === 'empty'
+                    }"
+                  ></i>
+                </div>
+                <div class="description-craftsman">
+                  <h3 class="card-name">{{ artisan.name }}</h3>
+                  <h4 class="card-h4">{{ artisan.specialty }}</h4>
+                  <h4 class="card-h4">{{ artisan.location }}</h4>
+                </div>
+              </div>
+            </div>
+          </div>
+        </ng-container>
+      </div>
+    </div>
+  </section>
+</main>
