--- a/src/app/building/building.component.html
+++ b/src/app/building/building.component.html
@@ -6,28 +6,12 @@
   <section class="building-craftsmen">
     <div class="craftsmen-card" *ngIf="data && data.length > 0">
       <div class="row row-cols-1 row-cols-md-3 g-4">
-        <ng-container *ngFor="let artisan of data">
+        <ng-container *ngFor="let artisan of data; let i = index">
           <div class="col">
-            <div class="card">
-              <div class="card-body">
-                <div class="stars">
-                  <i
-                    *ngFor="let star of artisan.note | starRating"
-                    class="bi"
-                    [ngClass]="{
-                      'bi-star-fill': star === 'full',
-                      'bi-star-half': star === 'half',
-                      'bi-star': star === 'empty'
-                    }"
-                  ></i>
-                </div>
-                <div class="description-craftsman">
-                  <h3 class="card-name">{{ artisan.name }}</h3>
-                  <h4 class="card-h4">{{ artisan.specialty }}</h4>
-                  <h4 class="card-h4">{{ artisan.location }}</h4>
-                </div>
-              </div>
-            </div>
+            <app-craftman-card-type
+              [artisan]="artisan"
+              [index]="i"
+            ></app-craftman-card-type>
           </div>
         </ng-container>
       </div>
